--- a/bin/training_config.yaml
+++ b/bin/training_config.yaml
@@ -2,5 +2,8 @@ workerPoolSpecs:
   machineSpec:
     machineType: n1-standard-4
   replicaCount: 1
-  containerSpec:
-    imageUri: europe-docker.pkg.dev/vertex-ai/training/tf-cpu.2-4:latest
+  pythonPackageSpec:
+    executorImageUri: europe-docker.pkg.dev/vertex-ai/training/tf-cpu.2-3:latest
+    packageUris: gs://something
+    pythonModule: trainer.task
+    args: --epochs=30 --batch-size=2048
