--- a/bin/training_config.yaml
+++ b/bin/training_config.yaml
@@ -4,7 +4,10 @@ workerPoolSpecs:
   replicaCount: 1
   pythonPackageSpec:
     executorImageUri: europe-docker.pkg.dev/vertex-ai/training/tf-cpu.2-3:latest
-    packageUris: gs://ml-in-the-cloud-vertex/src/
+    packageUris: gs://ml-in-the-cloud-vertex/dist/my_first_ml_model-0.3.tar.gz
     pythonModule: trainer.task
-    args: --epochs=30 --batch-size=2048 --job-dir gs://ml-in-the-cloud-vertex/job_dir/
+    args:
+      - --epochs=30
+      - --batch-size=2048
+      - --job-dir=gs://ml-in-the-cloud-vertex/job_dir/
 
