Cloud Build config file

--- a/custom_model/cloudbuild.yaml
+++ b/custom_model/cloudbuild.yaml
@@ -11,4 +11,4 @@ steps:
 artifacts:
   objects:
     location: 'gs://ihr-vertex-pipelines/dist/'
-    paths: [ 'dist/*.tar.gz' ]
+    paths: [ 'custom_model/dist/*.tar.gz' ]
