--- a/custom_model/config/training_config.yaml
+++ b/custom_model/config/training_config.yaml
@@ -4,10 +4,10 @@ workerPoolSpecs:
   replicaCount: 1
   pythonPackageSpec:
     executorImageUri: europe-docker.pkg.dev/vertex-ai/training/tf-cpu.2-7:latest
-    packageUris: gs://ihr-vertex-pipelines/dist/my_first_ml_model-0.5.tar.gz
+    packageUris: gs://ihr-vertex-pipelines/dist/my_first_ml_model-0.6.tar.gz
     pythonModule: trainer.task
     args:
-      - --data-location=gs://ihr-vertex-pipelines/data/aclImdb/
-      - --epochs=30
-      - --batch-size=1024
+      - --data-location=/gcs/ihr-vertex-pipelines/data/aclImdb/
+      - --epochs=15
+      - --batch-size=128
       - --job-dir=gs://ihr-vertex-pipelines/job_dir/
