--- a/custom_model/config/training_config.yaml
+++ b/custom_model/config/training_config.yaml
@@ -4,10 +4,11 @@ workerPoolSpecs:
   replicaCount: 1
   pythonPackageSpec:
     executorImageUri: europe-docker.pkg.dev/vertex-ai/training/tf-cpu.2-7:latest
-    packageUris: gs://ihr-vertex-pipelines/dist/my_first_ml_model-0.8.tar.gz
+    packageUris: gs://ihr-vertex-pipelines/dist/my_first_ml_model-0.9.tar.gz
     pythonModule: trainer.task
     args:
       - --data-location=/gcs/ihr-vertex-pipelines/data/aclImdb/
       - --epochs=15
       - --batch-size=128
       - --job-dir=gs://ihr-vertex-pipelines/job_dir/
+      - --parallel-reads
