--- a/custom_model/config/training_config.yaml
+++ b/custom_model/config/training_config.yaml
@@ -1,14 +1,14 @@
 serviceAccount: ml-in-prod-sa@ihr-vertex-pipelines.iam.gserviceaccount.com
-tensorboard: projects/237148598933/locations/europe-west4/tensorboards/9086364091940864000
+tensorboard: projects/237148598933/locations/europe-west4/tensorboards/3505278253721976832
 baseOutputDirectory:
-  outputUriPrefix: gs://cloud-ai-platform-620193d4-1393-4711-a076-d711199db947/0.9+2.g860ee7f/
+  outputUriPrefix: gs://ihr-vertex-pipelines/0.9+4.g25d04f2/batch=8192/epochs=15/
 workerPoolSpecs:
   machineSpec:
     machineType: n1-standard-4
   replicaCount: 1
   pythonPackageSpec:
     executorImageUri: europe-docker.pkg.dev/vertex-ai/training/tf-cpu.2-7:latest
-    packageUris: gs://ihr-vertex-pipelines/dist/my_first_ml_model-0.9+2.g860ee7f.tar.gz
+    packageUris: gs://ihr-vertex-pipelines/dist/my_first_ml_model-0.9+4.g25d04f2.tar.gz
     pythonModule: trainer.task
     args:
       - --data-location=/gcs/ihr-vertex-pipelines/data/aclImdb/
