--- a/dataflow_custom_container/requirements.txt
+++ b/dataflow_custom_container/requirements.txt
@@ -1,8 +1,6 @@
+apache-beam[gcp]==2.35.0
 tensorflow==2.7.0
 google-cloud-aiplatform==1.9.0
-tfx[kfp]
-tfx-bsl
-versioneer
-
-# For applications handling images in Cloud ML Engine
-Pillow
+tfx[kfp]==1.5.0
+tfx-bsl==1.5.0
+versioneer==0.21
