--- a/model_mlops_with_vertex/config/training_config_ht.yaml
+++ b/model_mlops_with_vertex/config/training_config_ht.yaml
@@ -1,7 +1,3 @@
-serviceAccount: ml-in-prod-vertex-sa@ihr-vertex-pipelines.iam.gserviceaccount.com
-tensorboard: projects/237148598933/locations/europe-west4/tensorboards/3505278253721976832
-baseOutputDirectory:
-  outputUriPrefix: gs://ihr-vertex-pipelines/0.11+1.g0727016/ht/
 studySpec:
   metrics:
     - metricId: kschool_accuracy
@@ -22,13 +18,17 @@ studySpec:
 maxTrialCount: 100
 parallelTrialCount: 10
 trialJobSpec:
+  serviceAccount: ml-in-prod-vertex-sa@ihr-vertex-pipelines.iam.gserviceaccount.com
+  tensorboard: projects/237148598933/locations/europe-west4/tensorboards/3505278253721976832
+  baseOutputDirectory:
+    outputUriPrefix: gs://ihr-vertex-pipelines/ht/0.11+2.gbe36177/
   workerPoolSpecs:
     machineSpec:
       machineType: n1-standard-4
     replicaCount: 1
     pythonPackageSpec:
       executorImageUri: europe-docker.pkg.dev/vertex-ai/training/tf-cpu.2-7:latest
-      packageUris: gs://ihr-vertex-pipelines/dist/my_first_ml_model-0.11+1.g0727016.tar.gz
+      packageUris: gs://ihr-vertex-pipelines/dist/my_first_ml_model-0.11+2.gbe36177.tar.gz
       pythonModule: trainer.task
       args:
         - --data-location=gs://ihr-vertex-pipelines/data/prepared/
